parser.output
Terminals unused in grammar

   "program keyword"
   "subroutine  keyword"
   "function  keyword"
   "stop keyword"
   "return keyword"
   "parameter"
   "integer keyword"
   "real keyword"
   "cycle keyword"
   "exit keyword"
   "if keyword"
   "else keyword"
   "elseif keyword"
   "endif keyword"
   "while keyword"
   "do keyword"
   "enddo keyword"
   "print keyword"
   "read keyword"
   "call keyword"
   "error"
   "end of line"
   "end of file"


State 31 conflicts: 4 shift/reduce
State 35 conflicts: 9 shift/reduce


Grammar

    0 $accept: ExecutableProgram "end keyword"

    1 ExecutableProgram: MainProgram
    2                  | ExecutableProgram Subprogram

    3 Subprogram: Subroutine
    4           | Function

    5 MainProgram: MainProgramPrefix Body MainProgramSuffix

    6 Subroutine: SubroutinePrefix "(" ParameterList ")" Body SubroutineSuffix

    7 Function: FunctionPrefix "(" ParameterList ")" Body FunctionSuffix

    8 MainProgramPrefix: "PROGRAM" "id"

    9 MainProgramSuffix: "STOP" "END"

   10 SubroutinePrefix: "SUBROUTINE" "id"

   11 SubroutineSuffix: "RETURN" "END"

   12 FunctionPrefix: Type "FUNCTION" "id"

   13 FunctionSuffix: "RETURN" "END"

   14 ParameterList: "id"
   15              | ParameterList "," "id"

   16 Body: BodyConstruct
   17     | Body BodyConstruct

   18 BodyConstruct: SpecificationConstruct
   19              | ExecutableConstruct

   20 SpecificationConstruct: DeclarationConstruct
   21                       | ParameterStatement

   22 DeclarationConstruct: Declaration
   23                     | DeclarationConstruct Declaration

   24 Declaration: Type IdentifierDeclarationList

   25 Type: "INTEGER"
   26     | "REAL"
   27     | "CHARACTER"
   28     | "LOGICAL"

   29 IdentifierDeclarationList: IdentifierDeclaration
   30                          | IdentifierDeclarationList "," IdentifierDeclaration

   31 IdentifierDeclaration: "id"
   32                      | "id" "(" "integer number" ")"

   33 ParameterStatement: "PARAMETER" "(" ConstantList ")"

   34 ConstantList: ConstantDefinition
   35             | ConstantList "," ConstantDefinition

   36 ConstantDefinition: "id" "=" ConstantExpression

   37 ConstantExpression: Number
   38                   | "string"

   39 Number: "integer number"
   40       | "number number"

   41 ExecutableConstruct: Statement
   42                    | ExecutableConstruct Statement

   43 Statement: AssignmentStatement
   44          | PrintStatement
   45          | ReadStatement
   46          | IfConstruct
   47          | DoConstruct
   48          | WhileConstruct
   49          | CallStatement
   50          | CycleStatement
   51          | ExitStatement

   52 AssignmentStatement: "id" "=" Expression
   53                    | "id" "(" "integer number" ")" "=" Expression

   54 Expression: Factor
   55           | Expression "+" Factor
   56           | Expression "-" Factor

   57 Factor: Term
   58       | Factor "*" Term
   59       | Factor "/" Term

   60 Term: "(" Expression ")"
   61     | "id" "(" ExpressionList ")"
   62     | "id" "(" ")"
   63     | "id"
   64     | Number
   65     | "-" Term

   66 ExpressionList: Expression
   67               | ExpressionList "," Expression

   68 PrintStatement: "PRINT" PrintList

   69 PrintList: PrintItem
   70          | PrintList "," PrintItem

   71 PrintItem: "string"
   72          | Expression

   73 ReadStatement: "READ" ParameterList

   74 IfConstruct: IfThenStatement ThenConstruct

   75 IfThenStatement: "IF" LogicalExpression "THEN"

   76 ThenConstruct: Statement EndIfStatement
   77              | Statement ElseIfConstruct
   78              | Statement ElseConstruct

   79 EndIfStatement: "ENDIF"

   80 ElseIfConstruct: ElseIfStatement ThenConstruct

   81 ElseIfStatement: "ELSEIF" Expression "THEN"

   82 ElseConstruct: "ELSE" Expression "END"

   83 LogicalExpression: Expression Op Expression
   84                  | LogicalConstant

   85 Op: ".AND."
   86   | ".OR."
   87   | ".EQ."
   88   | ".NE."
   89   | ".GT."
   90   | ".GE."
   91   | ".LT."
   92   | ".LE."

   93 LogicalConstant: ".TRUE."
   94                | ".FALSE."

   95 DoConstruct: DoStatement DoLoopControl EndDoStatement

   96 DoStatement: "DO"

   97 DoLoopControl: "id" "=" Expression "," Expression
   98              | "id" "=" Expression "," Expression "," Expression

   99 EndDoStatement: Statement "ENDDO"

  100 WhileConstruct: WhileStatement EndWhileStatement

  101 WhileStatement: "WHILE" LogicalExpression "DO"

  102 EndWhileStatement: Statement "ENDDO"

  103 CallStatement: "CALL" "id" "(" ParameterList ")"
  104              | "CALL" "id" "(" ")"

  105 CycleStatement: "CONTINUE"

  106 ExitStatement: "EXIT"


Terminals, with rules where they appear

"end keyword" (0) 0
error (256)
"program keyword" (258)
"subroutine  keyword" (259)
"function  keyword" (260)
"stop keyword" (261)
"return keyword" (262)
"parameter" (263)
"integer keyword" (264)
"real keyword" (265)
"cycle keyword" (266)
"exit keyword" (267)
"if keyword" (268)
"else keyword" (269)
"elseif keyword" (270)
"endif keyword" (271)
"while keyword" (272)
"do keyword" (273)
"enddo keyword" (274)
"print keyword" (275)
"read keyword" (276)
"call keyword" (277)
"error" (278)
"end of line" (279)
"end of file" (280)
"+" (281) 55
"-" (282) 56 65
"*" (283) 58
"/" (284) 59
"=" (285) 36 52 53 97 98
".EQ." (286) 87
".NE." (287) 88
".GT." (288) 89
".GE." (289) 90
".LT." (290) 91
".LE." (291) 92
".TRUE." (292) 93
".FALSE." (293) 94
"," (294) 15 30 35 67 70 97 98
"(" (295) 6 7 32 33 53 60 61 62 103 104
")" (296) 6 7 32 33 53 60 61 62 103 104
"integer number" (297) 32 39 53
"number number" (298) 40
"id" (299) 8 10 12 14 15 31 32 36 52 53 61 62 63 97 98 103 104
"string" (300) 38 71
"PROGRAM" (301) 8
"STOP" (302) 9
"END" (303) 9 11 13 82
"SUBROUTINE" (304) 10
"RETURN" (305) 11 13
"FUNCTION" (306) 12
"INTEGER" (307) 25
"REAL" (308) 26
"CHARACTER" (309) 27
"LOGICAL" (310) 28
"PARAMETER" (311) 33
"PRINT" (312) 68
"READ" (313) 73
"IF" (314) 75
"THEN" (315) 75 81
"ENDIF" (316) 79
"ELSEIF" (317) 81
"ELSE" (318) 82
".AND." (319) 85
".OR." (320) 86
"DO" (321) 96 101
"ENDDO" (322) 99 102
"WHILE" (323) 101
"CALL" (324) 103 104
"CONTINUE" (325) 105
"EXIT" (326) 106


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
ExecutableProgram (73)
    on left: 1 2, on right: 0 2
Subprogram (74)
    on left: 3 4, on right: 2
MainProgram (75)
    on left: 5, on right: 1
Subroutine (76)
    on left: 6, on right: 3
Function (77)
    on left: 7, on right: 4
MainProgramPrefix (78)
    on left: 8, on right: 5
MainProgramSuffix (79)
    on left: 9, on right: 5
SubroutinePrefix (80)
    on left: 10, on right: 6
SubroutineSuffix (81)
    on left: 11, on right: 6
FunctionPrefix (82)
    on left: 12, on right: 7
FunctionSuffix (83)
    on left: 13, on right: 7
ParameterList (84)
    on left: 14 15, on right: 6 7 15 73 103
Body (85)
    on left: 16 17, on right: 5 6 7 17
BodyConstruct (86)
    on left: 18 19, on right: 16 17
SpecificationConstruct (87)
    on left: 20 21, on right: 18
DeclarationConstruct (88)
    on left: 22 23, on right: 20 23
Declaration (89)
    on left: 24, on right: 22 23
Type (90)
    on left: 25 26 27 28, on right: 12 24
IdentifierDeclarationList (91)
    on left: 29 30, on right: 24 30
IdentifierDeclaration (92)
    on left: 31 32, on right: 29 30
ParameterStatement (93)
    on left: 33, on right: 21
ConstantList (94)
    on left: 34 35, on right: 33 35
ConstantDefinition (95)
    on left: 36, on right: 34 35
ConstantExpression (96)
    on left: 37 38, on right: 36
Number (97)
    on left: 39 40, on right: 37 64
ExecutableConstruct (98)
    on left: 41 42, on right: 19 42
Statement (99)
    on left: 43 44 45 46 47 48 49 50 51, on right: 41 42 76 77 78 99
    102
AssignmentStatement (100)
    on left: 52 53, on right: 43
Expression (101)
    on left: 54 55 56, on right: 52 53 55 56 60 66 67 72 81 82 83 97
    98
Factor (102)
    on left: 57 58 59, on right: 54 55 56 58 59
Term (103)
    on left: 60 61 62 63 64 65, on right: 57 58 59 65
ExpressionList (104)
    on left: 66 67, on right: 61 67
PrintStatement (105)
    on left: 68, on right: 44
PrintList (106)
    on left: 69 70, on right: 68 70
PrintItem (107)
    on left: 71 72, on right: 69 70
ReadStatement (108)
    on left: 73, on right: 45
IfConstruct (109)
    on left: 74, on right: 46
IfThenStatement (110)
    on left: 75, on right: 74
ThenConstruct (111)
    on left: 76 77 78, on right: 74 80
EndIfStatement (112)
    on left: 79, on right: 76
ElseIfConstruct (113)
    on left: 80, on right: 77
ElseIfStatement (114)
    on left: 81, on right: 80
ElseConstruct (115)
    on left: 82, on right: 78
LogicalExpression (116)
    on left: 83 84, on right: 75 101
Op (117)
    on left: 85 86 87 88 89 90 91 92, on right: 83
LogicalConstant (118)
    on left: 93 94, on right: 84
DoConstruct (119)
    on left: 95, on right: 47
DoStatement (120)
    on left: 96, on right: 95
DoLoopControl (121)
    on left: 97 98, on right: 95
EndDoStatement (122)
    on left: 99, on right: 95
WhileConstruct (123)
    on left: 100, on right: 48
WhileStatement (124)
    on left: 101, on right: 100
EndWhileStatement (125)
    on left: 102, on right: 100
CallStatement (126)
    on left: 103 104, on right: 49
CycleStatement (127)
    on left: 105, on right: 50
ExitStatement (128)
    on left: 106, on right: 51


State 0

    0 $accept: . ExecutableProgram "end keyword"

    "PROGRAM"  shift, and go to state 1

    ExecutableProgram  go to state 2
    MainProgram        go to state 3
    MainProgramPrefix  go to state 4


State 1

    8 MainProgramPrefix: "PROGRAM" . "id"

    "id"  shift, and go to state 5


State 2

    0 $accept: ExecutableProgram . "end keyword"
    2 ExecutableProgram: ExecutableProgram . Subprogram

    "end keyword"  shift, and go to state 6
    "SUBROUTINE"   shift, and go to state 7
    "INTEGER"      shift, and go to state 8
    "REAL"         shift, and go to state 9
    "CHARACTER"    shift, and go to state 10
    "LOGICAL"      shift, and go to state 11

    Subprogram        go to state 12
    Subroutine        go to state 13
    Function          go to state 14
    SubroutinePrefix  go to state 15
    FunctionPrefix    go to state 16
    Type              go to state 17


State 3

    1 ExecutableProgram: MainProgram .

    $default  reduce using rule 1 (ExecutableProgram)


State 4

    5 MainProgram: MainProgramPrefix . Body MainProgramSuffix

    "id"         shift, and go to state 18
    "INTEGER"    shift, and go to state 8
    "REAL"       shift, and go to state 9
    "CHARACTER"  shift, and go to state 10
    "LOGICAL"    shift, and go to state 11
    "PARAMETER"  shift, and go to state 19
    "PRINT"      shift, and go to state 20
    "READ"       shift, and go to state 21
    "IF"         shift, and go to state 22
    "DO"         shift, and go to state 23
    "WHILE"      shift, and go to state 24
    "CALL"       shift, and go to state 25
    "CONTINUE"   shift, and go to state 26
    "EXIT"       shift, and go to state 27

    Body                    go to state 28
    BodyConstruct           go to state 29
    SpecificationConstruct  go to state 30
    DeclarationConstruct    go to state 31
    Declaration             go to state 32
    Type                    go to state 33
    ParameterStatement      go to state 34
    ExecutableConstruct     go to state 35
    Statement               go to state 36
    AssignmentStatement     go to state 37
    PrintStatement          go to state 38
    ReadStatement           go to state 39
    IfConstruct             go to state 40
    IfThenStatement         go to state 41
    DoConstruct             go to state 42
    DoStatement             go to state 43
    WhileConstruct          go to state 44
    WhileStatement          go to state 45
    CallStatement           go to state 46
    CycleStatement          go to state 47
    ExitStatement           go to state 48


State 5

    8 MainProgramPrefix: "PROGRAM" "id" .

    $default  reduce using rule 8 (MainProgramPrefix)


State 6

    0 $accept: ExecutableProgram "end keyword" .

    $default  accept


State 7

   10 SubroutinePrefix: "SUBROUTINE" . "id"

    "id"  shift, and go to state 49


State 8

   25 Type: "INTEGER" .

    $default  reduce using rule 25 (Type)


State 9

   26 Type: "REAL" .

    $default  reduce using rule 26 (Type)


State 10

   27 Type: "CHARACTER" .

    $default  reduce using rule 27 (Type)


State 11

   28 Type: "LOGICAL" .

    $default  reduce using rule 28 (Type)


State 12

    2 ExecutableProgram: ExecutableProgram Subprogram .

    $default  reduce using rule 2 (ExecutableProgram)


State 13

    3 Subprogram: Subroutine .

    $default  reduce using rule 3 (Subprogram)


State 14

    4 Subprogram: Function .

    $default  reduce using rule 4 (Subprogram)


State 15

    6 Subroutine: SubroutinePrefix . "(" ParameterList ")" Body SubroutineSuffix

    "("  shift, and go to state 50


State 16

    7 Function: FunctionPrefix . "(" ParameterList ")" Body FunctionSuffix

    "("  shift, and go to state 51


State 17

   12 FunctionPrefix: Type . "FUNCTION" "id"

    "FUNCTION"  shift, and go to state 52


State 18

   52 AssignmentStatement: "id" . "=" Expression
   53                    | "id" . "(" "integer number" ")" "=" Expression

    "="  shift, and go to state 53
    "("  shift, and go to state 54


State 19

   33 ParameterStatement: "PARAMETER" . "(" ConstantList ")"

    "("  shift, and go to state 55


State 20

   68 PrintStatement: "PRINT" . PrintList

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60
    "string"          shift, and go to state 61

    Number      go to state 62
    Expression  go to state 63
    Factor      go to state 64
    Term        go to state 65
    PrintList   go to state 66
    PrintItem   go to state 67


State 21

   73 ReadStatement: "READ" . ParameterList

    "id"  shift, and go to state 68

    ParameterList  go to state 69


State 22

   75 IfThenStatement: "IF" . LogicalExpression "THEN"

    "-"               shift, and go to state 56
    ".TRUE."          shift, and go to state 70
    ".FALSE."         shift, and go to state 71
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number             go to state 62
    Expression         go to state 72
    Factor             go to state 64
    Term               go to state 65
    LogicalExpression  go to state 73
    LogicalConstant    go to state 74


State 23

   96 DoStatement: "DO" .

    $default  reduce using rule 96 (DoStatement)


State 24

  101 WhileStatement: "WHILE" . LogicalExpression "DO"

    "-"               shift, and go to state 56
    ".TRUE."          shift, and go to state 70
    ".FALSE."         shift, and go to state 71
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number             go to state 62
    Expression         go to state 72
    Factor             go to state 64
    Term               go to state 65
    LogicalExpression  go to state 75
    LogicalConstant    go to state 74


State 25

  103 CallStatement: "CALL" . "id" "(" ParameterList ")"
  104              | "CALL" . "id" "(" ")"

    "id"  shift, and go to state 76


State 26

  105 CycleStatement: "CONTINUE" .

    $default  reduce using rule 105 (CycleStatement)


State 27

  106 ExitStatement: "EXIT" .

    $default  reduce using rule 106 (ExitStatement)


State 28

    5 MainProgram: MainProgramPrefix Body . MainProgramSuffix
   17 Body: Body . BodyConstruct

    "id"         shift, and go to state 18
    "STOP"       shift, and go to state 77
    "INTEGER"    shift, and go to state 8
    "REAL"       shift, and go to state 9
    "CHARACTER"  shift, and go to state 10
    "LOGICAL"    shift, and go to state 11
    "PARAMETER"  shift, and go to state 19
    "PRINT"      shift, and go to state 20
    "READ"       shift, and go to state 21
    "IF"         shift, and go to state 22
    "DO"         shift, and go to state 23
    "WHILE"      shift, and go to state 24
    "CALL"       shift, and go to state 25
    "CONTINUE"   shift, and go to state 26
    "EXIT"       shift, and go to state 27

    MainProgramSuffix       go to state 78
    BodyConstruct           go to state 79
    SpecificationConstruct  go to state 30
    DeclarationConstruct    go to state 31
    Declaration             go to state 32
    Type                    go to state 33
    ParameterStatement      go to state 34
    ExecutableConstruct     go to state 35
    Statement               go to state 36
    AssignmentStatement     go to state 37
    PrintStatement          go to state 38
    ReadStatement           go to state 39
    IfConstruct             go to state 40
    IfThenStatement         go to state 41
    DoConstruct             go to state 42
    DoStatement             go to state 43
    WhileConstruct          go to state 44
    WhileStatement          go to state 45
    CallStatement           go to state 46
    CycleStatement          go to state 47
    ExitStatement           go to state 48


State 29

   16 Body: BodyConstruct .

    $default  reduce using rule 16 (Body)


State 30

   18 BodyConstruct: SpecificationConstruct .

    $default  reduce using rule 18 (BodyConstruct)


State 31

   20 SpecificationConstruct: DeclarationConstruct .
   23 DeclarationConstruct: DeclarationConstruct . Declaration

    "INTEGER"    shift, and go to state 8
    "REAL"       shift, and go to state 9
    "CHARACTER"  shift, and go to state 10
    "LOGICAL"    shift, and go to state 11

    "INTEGER"    [reduce using rule 20 (SpecificationConstruct)]
    "REAL"       [reduce using rule 20 (SpecificationConstruct)]
    "CHARACTER"  [reduce using rule 20 (SpecificationConstruct)]
    "LOGICAL"    [reduce using rule 20 (SpecificationConstruct)]
    $default     reduce using rule 20 (SpecificationConstruct)

    Declaration  go to state 80
    Type         go to state 33


State 32

   22 DeclarationConstruct: Declaration .

    $default  reduce using rule 22 (DeclarationConstruct)


State 33

   24 Declaration: Type . IdentifierDeclarationList

    "id"  shift, and go to state 81

    IdentifierDeclarationList  go to state 82
    IdentifierDeclaration      go to state 83


State 34

   21 SpecificationConstruct: ParameterStatement .

    $default  reduce using rule 21 (SpecificationConstruct)


State 35

   19 BodyConstruct: ExecutableConstruct .
   42 ExecutableConstruct: ExecutableConstruct . Statement

    "id"        shift, and go to state 18
    "PRINT"     shift, and go to state 20
    "READ"      shift, and go to state 21
    "IF"        shift, and go to state 22
    "DO"        shift, and go to state 23
    "WHILE"     shift, and go to state 24
    "CALL"      shift, and go to state 25
    "CONTINUE"  shift, and go to state 26
    "EXIT"      shift, and go to state 27

    "id"        [reduce using rule 19 (BodyConstruct)]
    "PRINT"     [reduce using rule 19 (BodyConstruct)]
    "READ"      [reduce using rule 19 (BodyConstruct)]
    "IF"        [reduce using rule 19 (BodyConstruct)]
    "DO"        [reduce using rule 19 (BodyConstruct)]
    "WHILE"     [reduce using rule 19 (BodyConstruct)]
    "CALL"      [reduce using rule 19 (BodyConstruct)]
    "CONTINUE"  [reduce using rule 19 (BodyConstruct)]
    "EXIT"      [reduce using rule 19 (BodyConstruct)]
    $default    reduce using rule 19 (BodyConstruct)

    Statement            go to state 84
    AssignmentStatement  go to state 37
    PrintStatement       go to state 38
    ReadStatement        go to state 39
    IfConstruct          go to state 40
    IfThenStatement      go to state 41
    DoConstruct          go to state 42
    DoStatement          go to state 43
    WhileConstruct       go to state 44
    WhileStatement       go to state 45
    CallStatement        go to state 46
    CycleStatement       go to state 47
    ExitStatement        go to state 48


State 36

   41 ExecutableConstruct: Statement .

    $default  reduce using rule 41 (ExecutableConstruct)


State 37

   43 Statement: AssignmentStatement .

    $default  reduce using rule 43 (Statement)


State 38

   44 Statement: PrintStatement .

    $default  reduce using rule 44 (Statement)


State 39

   45 Statement: ReadStatement .

    $default  reduce using rule 45 (Statement)


State 40

   46 Statement: IfConstruct .

    $default  reduce using rule 46 (Statement)


State 41

   74 IfConstruct: IfThenStatement . ThenConstruct

    "id"        shift, and go to state 18
    "PRINT"     shift, and go to state 20
    "READ"      shift, and go to state 21
    "IF"        shift, and go to state 22
    "DO"        shift, and go to state 23
    "WHILE"     shift, and go to state 24
    "CALL"      shift, and go to state 25
    "CONTINUE"  shift, and go to state 26
    "EXIT"      shift, and go to state 27

    Statement            go to state 85
    AssignmentStatement  go to state 37
    PrintStatement       go to state 38
    ReadStatement        go to state 39
    IfConstruct          go to state 40
    IfThenStatement      go to state 41
    ThenConstruct        go to state 86
    DoConstruct          go to state 42
    DoStatement          go to state 43
    WhileConstruct       go to state 44
    WhileStatement       go to state 45
    CallStatement        go to state 46
    CycleStatement       go to state 47
    ExitStatement        go to state 48


State 42

   47 Statement: DoConstruct .

    $default  reduce using rule 47 (Statement)


State 43

   95 DoConstruct: DoStatement . DoLoopControl EndDoStatement

    "id"  shift, and go to state 87

    DoLoopControl  go to state 88


State 44

   48 Statement: WhileConstruct .

    $default  reduce using rule 48 (Statement)


State 45

  100 WhileConstruct: WhileStatement . EndWhileStatement

    "id"        shift, and go to state 18
    "PRINT"     shift, and go to state 20
    "READ"      shift, and go to state 21
    "IF"        shift, and go to state 22
    "DO"        shift, and go to state 23
    "WHILE"     shift, and go to state 24
    "CALL"      shift, and go to state 25
    "CONTINUE"  shift, and go to state 26
    "EXIT"      shift, and go to state 27

    Statement            go to state 89
    AssignmentStatement  go to state 37
    PrintStatement       go to state 38
    ReadStatement        go to state 39
    IfConstruct          go to state 40
    IfThenStatement      go to state 41
    DoConstruct          go to state 42
    DoStatement          go to state 43
    WhileConstruct       go to state 44
    WhileStatement       go to state 45
    EndWhileStatement    go to state 90
    CallStatement        go to state 46
    CycleStatement       go to state 47
    ExitStatement        go to state 48


State 46

   49 Statement: CallStatement .

    $default  reduce using rule 49 (Statement)


State 47

   50 Statement: CycleStatement .

    $default  reduce using rule 50 (Statement)


State 48

   51 Statement: ExitStatement .

    $default  reduce using rule 51 (Statement)


State 49

   10 SubroutinePrefix: "SUBROUTINE" "id" .

    $default  reduce using rule 10 (SubroutinePrefix)


State 50

    6 Subroutine: SubroutinePrefix "(" . ParameterList ")" Body SubroutineSuffix

    "id"  shift, and go to state 68

    ParameterList  go to state 91


State 51

    7 Function: FunctionPrefix "(" . ParameterList ")" Body FunctionSuffix

    "id"  shift, and go to state 68

    ParameterList  go to state 92


State 52

   12 FunctionPrefix: Type "FUNCTION" . "id"

    "id"  shift, and go to state 93


State 53

   52 AssignmentStatement: "id" "=" . Expression

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number      go to state 62
    Expression  go to state 94
    Factor      go to state 64
    Term        go to state 65


State 54

   53 AssignmentStatement: "id" "(" . "integer number" ")" "=" Expression

    "integer number"  shift, and go to state 95


State 55

   33 ParameterStatement: "PARAMETER" "(" . ConstantList ")"

    "id"  shift, and go to state 96

    ConstantList        go to state 97
    ConstantDefinition  go to state 98


State 56

   65 Term: "-" . Term

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number  go to state 62
    Term    go to state 99


State 57

   60 Term: "(" . Expression ")"

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number      go to state 62
    Expression  go to state 100
    Factor      go to state 64
    Term        go to state 65


State 58

   39 Number: "integer number" .

    $default  reduce using rule 39 (Number)


State 59

   40 Number: "number number" .

    $default  reduce using rule 40 (Number)


State 60

   61 Term: "id" . "(" ExpressionList ")"
   62     | "id" . "(" ")"
   63     | "id" .

    "("  shift, and go to state 101

    $default  reduce using rule 63 (Term)


State 61

   71 PrintItem: "string" .

    $default  reduce using rule 71 (PrintItem)


State 62

   64 Term: Number .

    $default  reduce using rule 64 (Term)


State 63

   55 Expression: Expression . "+" Factor
   56           | Expression . "-" Factor
   72 PrintItem: Expression .

    "+"  shift, and go to state 102
    "-"  shift, and go to state 103

    $default  reduce using rule 72 (PrintItem)


State 64

   54 Expression: Factor .
   58 Factor: Factor . "*" Term
   59       | Factor . "/" Term

    "*"  shift, and go to state 104
    "/"  shift, and go to state 105

    $default  reduce using rule 54 (Expression)


State 65

   57 Factor: Term .

    $default  reduce using rule 57 (Factor)


State 66

   68 PrintStatement: "PRINT" PrintList .
   70 PrintList: PrintList . "," PrintItem

    ","  shift, and go to state 106

    $default  reduce using rule 68 (PrintStatement)


State 67

   69 PrintList: PrintItem .

    $default  reduce using rule 69 (PrintList)


State 68

   14 ParameterList: "id" .

    $default  reduce using rule 14 (ParameterList)


State 69

   15 ParameterList: ParameterList . "," "id"
   73 ReadStatement: "READ" ParameterList .

    ","  shift, and go to state 107

    $default  reduce using rule 73 (ReadStatement)


State 70

   93 LogicalConstant: ".TRUE." .

    $default  reduce using rule 93 (LogicalConstant)


State 71

   94 LogicalConstant: ".FALSE." .

    $default  reduce using rule 94 (LogicalConstant)


State 72

   55 Expression: Expression . "+" Factor
   56           | Expression . "-" Factor
   83 LogicalExpression: Expression . Op Expression

    "+"      shift, and go to state 102
    "-"      shift, and go to state 103
    ".EQ."   shift, and go to state 108
    ".NE."   shift, and go to state 109
    ".GT."   shift, and go to state 110
    ".GE."   shift, and go to state 111
    ".LT."   shift, and go to state 112
    ".LE."   shift, and go to state 113
    ".AND."  shift, and go to state 114
    ".OR."   shift, and go to state 115

    Op  go to state 116


State 73

   75 IfThenStatement: "IF" LogicalExpression . "THEN"

    "THEN"  shift, and go to state 117


State 74

   84 LogicalExpression: LogicalConstant .

    $default  reduce using rule 84 (LogicalExpression)


State 75

  101 WhileStatement: "WHILE" LogicalExpression . "DO"

    "DO"  shift, and go to state 118


State 76

  103 CallStatement: "CALL" "id" . "(" ParameterList ")"
  104              | "CALL" "id" . "(" ")"

    "("  shift, and go to state 119


State 77

    9 MainProgramSuffix: "STOP" . "END"

    "END"  shift, and go to state 120


State 78

    5 MainProgram: MainProgramPrefix Body MainProgramSuffix .

    $default  reduce using rule 5 (MainProgram)


State 79

   17 Body: Body BodyConstruct .

    $default  reduce using rule 17 (Body)


State 80

   23 DeclarationConstruct: DeclarationConstruct Declaration .

    $default  reduce using rule 23 (DeclarationConstruct)


State 81

   31 IdentifierDeclaration: "id" .
   32                      | "id" . "(" "integer number" ")"

    "("  shift, and go to state 121

    $default  reduce using rule 31 (IdentifierDeclaration)


State 82

   24 Declaration: Type IdentifierDeclarationList .
   30 IdentifierDeclarationList: IdentifierDeclarationList . "," IdentifierDeclaration

    ","  shift, and go to state 122

    $default  reduce using rule 24 (Declaration)


State 83

   29 IdentifierDeclarationList: IdentifierDeclaration .

    $default  reduce using rule 29 (IdentifierDeclarationList)


State 84

   42 ExecutableConstruct: ExecutableConstruct Statement .

    $default  reduce using rule 42 (ExecutableConstruct)


State 85

   76 ThenConstruct: Statement . EndIfStatement
   77              | Statement . ElseIfConstruct
   78              | Statement . ElseConstruct

    "ENDIF"   shift, and go to state 123
    "ELSEIF"  shift, and go to state 124
    "ELSE"    shift, and go to state 125

    EndIfStatement   go to state 126
    ElseIfConstruct  go to state 127
    ElseIfStatement  go to state 128
    ElseConstruct    go to state 129


State 86

   74 IfConstruct: IfThenStatement ThenConstruct .

    $default  reduce using rule 74 (IfConstruct)


State 87

   97 DoLoopControl: "id" . "=" Expression "," Expression
   98              | "id" . "=" Expression "," Expression "," Expression

    "="  shift, and go to state 130


State 88

   95 DoConstruct: DoStatement DoLoopControl . EndDoStatement

    "id"        shift, and go to state 18
    "PRINT"     shift, and go to state 20
    "READ"      shift, and go to state 21
    "IF"        shift, and go to state 22
    "DO"        shift, and go to state 23
    "WHILE"     shift, and go to state 24
    "CALL"      shift, and go to state 25
    "CONTINUE"  shift, and go to state 26
    "EXIT"      shift, and go to state 27

    Statement            go to state 131
    AssignmentStatement  go to state 37
    PrintStatement       go to state 38
    ReadStatement        go to state 39
    IfConstruct          go to state 40
    IfThenStatement      go to state 41
    DoConstruct          go to state 42
    DoStatement          go to state 43
    EndDoStatement       go to state 132
    WhileConstruct       go to state 44
    WhileStatement       go to state 45
    CallStatement        go to state 46
    CycleStatement       go to state 47
    ExitStatement        go to state 48


State 89

  102 EndWhileStatement: Statement . "ENDDO"

    "ENDDO"  shift, and go to state 133


State 90

  100 WhileConstruct: WhileStatement EndWhileStatement .

    $default  reduce using rule 100 (WhileConstruct)


State 91

    6 Subroutine: SubroutinePrefix "(" ParameterList . ")" Body SubroutineSuffix
   15 ParameterList: ParameterList . "," "id"

    ","  shift, and go to state 107
    ")"  shift, and go to state 134


State 92

    7 Function: FunctionPrefix "(" ParameterList . ")" Body FunctionSuffix
   15 ParameterList: ParameterList . "," "id"

    ","  shift, and go to state 107
    ")"  shift, and go to state 135


State 93

   12 FunctionPrefix: Type "FUNCTION" "id" .

    $default  reduce using rule 12 (FunctionPrefix)


State 94

   52 AssignmentStatement: "id" "=" Expression .
   55 Expression: Expression . "+" Factor
   56           | Expression . "-" Factor

    "+"  shift, and go to state 102
    "-"  shift, and go to state 103

    $default  reduce using rule 52 (AssignmentStatement)


State 95

   53 AssignmentStatement: "id" "(" "integer number" . ")" "=" Expression

    ")"  shift, and go to state 136


State 96

   36 ConstantDefinition: "id" . "=" ConstantExpression

    "="  shift, and go to state 137


State 97

   33 ParameterStatement: "PARAMETER" "(" ConstantList . ")"
   35 ConstantList: ConstantList . "," ConstantDefinition

    ","  shift, and go to state 138
    ")"  shift, and go to state 139


State 98

   34 ConstantList: ConstantDefinition .

    $default  reduce using rule 34 (ConstantList)


State 99

   65 Term: "-" Term .

    $default  reduce using rule 65 (Term)


State 100

   55 Expression: Expression . "+" Factor
   56           | Expression . "-" Factor
   60 Term: "(" Expression . ")"

    "+"  shift, and go to state 102
    "-"  shift, and go to state 103
    ")"  shift, and go to state 140


State 101

   61 Term: "id" "(" . ExpressionList ")"
   62     | "id" "(" . ")"

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    ")"               shift, and go to state 141
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number          go to state 62
    Expression      go to state 142
    Factor          go to state 64
    Term            go to state 65
    ExpressionList  go to state 143


State 102

   55 Expression: Expression "+" . Factor

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number  go to state 62
    Factor  go to state 144
    Term    go to state 65


State 103

   56 Expression: Expression "-" . Factor

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number  go to state 62
    Factor  go to state 145
    Term    go to state 65


State 104

   58 Factor: Factor "*" . Term

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60

    Number  go to state 62
    Term    go to state 146


State 105

   59 Factor: Factor "/" . Term

    "-"               shift, and go to state 56
    "("               shift, and go to state 57
    "integer number"  shift, and go to state 58
    "number number"   shift, and go to state 59
    "id"              shift, and go to state 60
